# low-taper-fade-openenv-scaler

./: .dockerignore  .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  JUDGES_COMPLIANCE.md  Makefile  README.md  TODO_FOR_USER.md  __init__.py  client.py  hpc_gym.py  inference.py  messing-around-with-playbooks.md  modal_app.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_sandbox.py
bench/: bench_reset.py
bro/: isanshazest.md
docs/: hf_blog.md  hf_jobs.md  hf_spaces_deploy.md  pitch.md  video_script.md
env/: pyvenv.cfg
eval/: eval_suite.py
outputs/: output-20260407-202702.txt  output-20260407-202801.txt  output-20260407-204101.txt  output-20260407-204717.txt  output-20260407-205739.txt  output-20260407-210658.txt  output-20260407-210719.txt  output-20260407-223515.txt
runs/reward_demo/: reward_curve.jsonl
scripts/: train_spit.sbatch  validate-submission.sh
server/: Dockerfile  __init__.py  app.py
sysadmin_env/: models.py  overlayfs.py  rewards.py  sandbox.py  server.py
sysadmin_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sysadmin_env/tasks/: __init__.py  disk_full.py  hpc_gpu_ecc.py  hpc_munge.py  hpc_nfs_stale.py  hpc_ood_apache.py  hpc_outage.py  hpc_pid_stale.py  network_broken.py  nginx_crash.py
tests/: test_inferenxe.py  test_integrationt.py  test_models.py  test_overlayfs.py  test_packaginge.py  test_rewards.py  test_server.py  test_tasks.py
tools/: reward_curve_demo.py  verify_gold_trajectory.py
training/: agent_prompt.py  hf_jobs.py  hpc_colab.ipynb  hpc_openenv_gemma.py  logger.py  remote_env.py  reward_functions.py  rollout.py  train_hpc_outage.py
