[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysadmin-env"
version = "0.2.0"
description = "OpenEnv-style environment for linux server auto remediation tasks"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [
  { name = "sysadmin env contributors" },
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn==0.34.2",
  "pydantic==2.11.1",
  "websockets==15.0.1",
  "httpx==0.28.1",
  "openenv-core>=0.2.0",
  "openai==2.11.0",
  "gymnasium==1.0.0",
  "pexpect==4.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["client", "inference", "models", "hpc_gym"]

[tool.setuptools.packages.find]
include = ["sysadmin_env*", "server*", "training*", "bench*", "eval*", "tools*"]

